updated links back to aria practices document

--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -21,7 +21,7 @@
     <main>
       <h1>File Directory Example Treeview (explicit properties)</h1>
 
-      <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../aria-practices.html#TreeView">ARIA Treeview Design Pattern</a> for simulation of a file selector.   This example explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.</p>
+      <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../#TreeView">ARIA Treeview Design Pattern</a> for simulation of a file selector.   This example explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.</p>
 
       <section aria-labelledby="start">
         <h2 id="start">Example</h2>
@@ -699,7 +699,7 @@
       </section>
     </main>
     <nav>
-      <a href="../../../aria-practices.html#TreeView">Treeview Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+      <a href="../../../#TreeView">Treeview Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
   </body>
 </html>
