--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -21,7 +21,7 @@
     <main>
       <h1>Link Navigation Treeview Example (computed properties)</h1>
 
-      <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../aria-practices.html#TreeView">ARIA Treeview Design Pattern</a> for navigating and selecting a large set of nested links.   This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>.  The ARIA 1.0 Spectification for these properties states the browser can compute these values, but is not required to.</p>
+      <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../#TreeView">ARIA Treeview Design Pattern</a> for navigating and selecting a large set of nested links.   This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>.  The ARIA 1.0 Spectification for these properties states the browser can compute these values, but is not required to.</p>
 
       <section>
         <h2 id="ex_label">Example</h2>
@@ -630,7 +630,7 @@
       </section>
   </main>
   <nav>
-    <a href="../../../aria-practices.html#TreeView">Treeview Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../../#TreeView">Treeview Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
  
   </body>
