--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -21,7 +21,7 @@
     <main>
       <h1>Link Navigation Treeview (explicit properties)</h1>
 
-      <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../aria-practices.html#TreeView">ARIA Treeview Design Pattern</a> for navigating and selecting a large set of nested links. This example explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.</p>
+      <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../#TreeView">ARIA Treeview Design Pattern</a> for navigating and selecting a large set of nested links. This example explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.</p>
 
       <section>
         <h2 id="ex_label">Example</h2>
@@ -763,7 +763,7 @@
   </main>
   <nav>
     <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
-    <a href="../../../aria-practices.html#TreeView">Treeview Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../../#TreeView">Treeview Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
   </body>
 </html>
