updated menu button to match current template

--- a/examples/menu-button/menu-button-1/menu-button-1.html
+++ b/examples/menu-button/menu-button-1/menu-button-1.html
@@ -91,12 +91,12 @@
           <tbody>
             <tr>
             <tr>
-              <td>Down Arrow Key, <br/>Space, <br/>or Enter Key</td>
+              <td><kbd>Down Arrow, <br/>Space, <br/>or Enter</kbd></td>
               <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
             </tr>
             </tr>
             <tr>
-              <td>Up Arrow Key</td>
+              <td><kbd>Up Arrow Key</kbd></td>
               <td>Open <code>menu</code> and move focus to previous <code>menuitem</code></td>
             </tr>
           </tbody>
@@ -113,7 +113,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>Space or Enter Keys</td>
+              <td><kbd>Space or Enter</kbd></td>
               <td>
                 <ul>
                   <li>Activates any <code>click</code> event associated with the <code>menuitem</code>.  In this example updates the "Last Action" textbox.</li>
@@ -122,7 +122,7 @@
               </td>
             </tr>
             <tr>
-              <td>Escape Key</td>
+              <td><kbd>Escape</kbd></td>
               <td>
                 <ul>
                   <li>Closes popup menu.</li>
@@ -131,7 +131,7 @@
               </td>
             </tr>
             <tr>
-              <td>Up Arrow Key</td>
+              <td><kbd>Up Arrow</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to previous popup menu item.</li>
@@ -140,7 +140,7 @@
               </td>
             </tr>
              <tr>
-              <td>Down Arrow Key</td>
+              <td><kbd>Down Arrow</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to next popup menu item.</li>
@@ -149,7 +149,7 @@
               </td>
             </tr>
             <tr>
-              <td>Home</td>
+              <td><kbd>Home</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to first popup menu item.</li>
@@ -157,7 +157,7 @@
               </td>
             </tr>
             <tr>
-              <td>End</td>
+              <td><kbd>End</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to last popup menu item.</li>
@@ -165,7 +165,7 @@
               </td>
             </tr>
             <tr>
-              <td>A-Z, a-z</td>
+              <td><kbd>A-Z, a-z</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to the next popup item that starts with that letter.</li>
@@ -186,10 +186,10 @@
         <table aria-labelledby="rps1_label rps_label">
           <thead>
             <tr>
-              <th>Role</th>
-              <th>Attribute</th>
-              <th>Element</th>
-              <th>Usage</th>
+              <th scope="col">Role</th>
+              <th scope="col">Attribute</th>
+              <th scope="col">Element</th>
+              <th scope="col">Usage</th>
             </tr>
           </thead>
           <tbody>
@@ -265,10 +265,10 @@
         <table aria-labelledby="rps2_label rps_label">
           <thead>
             <tr>
-              <th>Role</th>
-              <th>Attribute</th>
-              <th>Element</th>
-              <th>Usage</th>
+              <th scope="col">Role</th>
+              <th scope="col">Attribute</th>
+              <th scope="col">Element</th>
+              <th scope="col">Usage</th>
             </tr>
           </thead>
           <tbody>
@@ -341,14 +341,10 @@
         <h2>Javascript and CSS Source Code</h2>
       
         <ul>
-          <li>MenuButtonAction CSS: <a href="css/menuButtonAction.css" type="text/css">MenubuttonAction.css</a></li>
-          <li>Javascript:
-            <ul>
-              <li><a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
-              <li><a href="js/MenuItemAction.js" type="text/javascript">MenuItemAction.js</a></li>
-              <li><a href="js/PopupMenuAction.js" type="text/javascript">PopupMenuAction.js</a></li>
-            </ul>
-          </li>  
+          <li>CSS: <a href="css/menuButtonAction.css" type="text/css">MenubuttonAction.css</a></li>
+          <li>Javascript: <a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
+          <li>Javascript: <a href="js/MenuItemAction.js" type="text/javascript">MenuItemAction.js</a></li>
+          <li>Javascript: <a href="js/PopupMenuAction.js" type="text/javascript">PopupMenuAction.js</a></li>
         </li>    
       </section>
       <section>
@@ -368,7 +364,7 @@
       </section>
     </main>
     <nav>
-      <a href="../../../aria-practices.html#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+      <a href="../../../#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
   </body>
   </html>
