--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -106,12 +106,12 @@
           <tbody>
             <tr>
             <tr>
-              <td>Down Arrow Key, <br/>Space, <br/>or Enter Key</td>
+              <td><kbd>Down Arrow, <br/>Space, <br/>or Enter</kbd></td>
               <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
             </tr>
             </tr>
             <tr>
-              <td>Up Arrow Key</td>
+              <td><kbd>Up Arrow</kbd></td>
               <td>Open <code>menu</code> and move focus to previous <code>menuitem</code></td>
             </tr>
           </tbody>
@@ -128,7 +128,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>Space or Enter Keys</td>
+              <td><kbd>Space or Enter</kbd></td>
               <td>
                 <ul>
                   <li>Activates the link asociated with the <code>menuitem</code>.</li>
@@ -136,7 +136,7 @@
               </td>
             </tr>
             <tr>
-              <td>Escape Key</td>
+              <td><kbd>Escape</kbd></td>
               <td>
                 <ul>
                   <li>Closes popup menu.</li>
@@ -145,7 +145,7 @@
               </td>
             </tr>
             <tr>
-              <td>Up Arrow Key</td>
+              <td><kbd>Up Arrow</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to previous popup menu item.</li>
@@ -154,7 +154,7 @@
               </td>
             </tr>
              <tr>
-              <td>Down Arrow Key</td>
+              <td><kbd>Down Arrow</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to next popup menu item.</li>
@@ -163,7 +163,7 @@
               </td>
             </tr>
             <tr>
-              <td>Home</td>
+              <td><kbd>Home</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to first popup menu item.</li>
@@ -171,7 +171,7 @@
               </td>
             </tr>
             <tr>
-              <td>End</td>
+              <td><kbd>End</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to last popup menu item.</li>
@@ -179,7 +179,7 @@
               </td>
             </tr>
             <tr>
-              <td>A-Z, a-z</td>
+              <td><kbd>A-Z, a-z</kbd></td>
               <td>
                 <ul>
                   <li>Moves focus to the next popup item that starts with that letter.</li>
@@ -199,10 +199,10 @@
         <table aria-labelledby="rps1_label rps_label">
           <thead>
             <tr>
-              <th>Role</th>
-              <th>Attribute</th>
-              <th>Element</th>
-              <th>Usage</th>
+              <th scope="col">Role</th>
+              <th scope="col">Attribute</th>
+              <th scope="col">Element</th>
+              <th scope="col">Usage</th>
             </tr>
           </thead>
           <tbody>
@@ -292,10 +292,10 @@
         <table aria-labelledby="rps2_label rps_label">
           <thead>
             <tr>
-              <th>Role</th>
-              <th>Attribute</th>
-              <th>Element</th>
-              <th>Usage</th>
+              <th scope="col">Role</th>
+              <th scope="col">Attribute</th>
+              <th scope="col">Element</th>
+              <th scope="col">Usage</th>
             </tr>
           </thead>
           <tbody>
@@ -383,15 +383,11 @@
         <h2>Javascript and CSS Source Code</h2>
       
         <ul>
-          <li>MenuButtonAction CSS: <a href="css/menuButtonLinks.css" type="text/css">MenubuttonLinks.css</a></li>
-          <li>Javascript:
-            <ul>
-              <li><a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
-              <li><a href="js/MenuItemLinks.js" type="text/javascript">MenuItemLinks.js</a></li>
-              <li><a href="js/PopupMenuLinks.js" type="text/javascript">PopupMenuLinks.js</a></li>
-            </ul>
-          </li>  
-        </li>    
+          <li>CSS: <a href="css/menuButtonLinks.css" type="text/css">MenubuttonLinks.css</a></li>
+          <li>Javascript: <a href="js/Menubutton.js" type="text/javascript">Menubutton.js</a></li>
+          <li>Javascript: <a href="js/MenuItemLinks.js" type="text/javascript">MenuItemLinks.js</a></li>
+          <li>Javascript: <a href="js/PopupMenuLinks.js" type="text/javascript">PopupMenuLinks.js</a></li>
+        </ul>    
       </section>
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
@@ -410,7 +406,7 @@
       </section>
     </main>
     <nav>
-      <a href="../../../aria-practices.html#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+      <a href="../../../#menubutton">Menu Button Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
   </body>
 </html>
