--- a/examples/radio/radio-2/radio-2.html
+++ b/examples/radio/radio-2/radio-2.html
@@ -20,7 +20,7 @@
 
       <h1>Radio Button Example (aria-activedescendant)</h1>
 
-      <p>This example implements the features of an ARIA <code>radiogroup</code> widget using <a href="../../../aria-practices.html#radiobutton">ARIA Radio Group Design Pattern</a> using <code>aria-activedescendant</code> for identifying the radio button with the focus.</p>
+      <p>This example implements the features of an ARIA <code>radiogroup</code> widget using <a href="../../../#radiobutton">Radio Button Design Pattern</a> using <code>aria-activedescendant</code> for identifying the radio button with the focus.</p>
 
       <p>Similar examples include: </p>
       <ul>
