update link text and links

--- a/examples/radio/radio-1/radio-1.html
+++ b/examples/radio/radio-1/radio-1.html
@@ -28,7 +28,7 @@
 
      <section aria-labelledby="example_label">
       <h2 id="example_label">Example Start</h2>
-      <div id="example">
+      <div id="ex1">
 
         <div  role="radiogroup" aria-labelledby="group_label_1" id="rg1">
             <h3 id="group_label_1">Pizza Crust</h3>
