--- a/examples/checkbox/checkbox-2/checkbox-2.html
+++ b/examples/checkbox/checkbox-2/checkbox-2.html
@@ -103,7 +103,7 @@
             <td><kbd>Tab</kbd></td>
             <td>
               <ul>
-                <li>Moves keyboard focus to the checked <code>checkbox</code>.</li>
+                <li>Moves keyboard focus to the <code>checkbox</code>.</li>
               </ul>  
             </td>
             <tr>
