Fixed invalid nesting of <ul> in a <p>

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3441,7 +3441,7 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
         Conditions That Cause Role <code>presentation</code> to be Ignored 
       </h3>
       <p>
-         Browsers ignore <code>role=&quot;presentation&quot;</code>, and it therefore has no effect, if either of the following are true about the element to which it is applied:
+         Browsers ignore <code>role=&quot;presentation&quot;</code>, and it therefore has no effect, if either of the following are true about the element to which it is applied:</p>
           <ul>
             <li>The element is focusable, e.g. it is natively focusable like an HTML link or input , or it has a <code>tabindex</code> attribute.</li>
             <li>
@@ -3450,7 +3450,6 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
               , e.g., <code>aria-label</code>.
             </li>
           </ul>
-      </p>
     </section>
     <section id="presentation_role_examples">    
       <h3>
