--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -21,7 +21,15 @@
   <body>
     <main>
       <h1>File Directory Treeview Example Using Computed Properties</h1>
-      <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../#TreeView">ARIA Treeview Design Pattern</a> for simulation of a file selector.   This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>.   The ARIA 1.0 Spectification for these properties states the browser can compute these values, but is not required to.</p>
+      <p>This example implements the features of the <a href="../../../#TreeView">Treeview Design Pattern</a> for simulation of a file selector.  This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>.   The ARIA 1.0 Spectification for these properties states the browser can compute these values, but is not required to.</p>
+
+      <p>Similar examples include: </p>
+      <ul>
+        <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
+        <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
+        <li><a href="../treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
+      </ul>
+
 
        <section aria-labelledby="start">
         <h2 id="start">Example</h2>
@@ -260,7 +268,7 @@
            </thead>
            <tbody>
              <tr>
-               <td><kbd>Up arrow</kbd></td>
+               <th><kbd>Up arrow</kbd></th>
                <td>
                 <ul>
                   <li>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</li>
@@ -268,7 +276,7 @@
                </td>
              </tr>
              <tr>
-               <td><kbd>Down arrow</kbd></td>
+               <th><kbd>Down arrow</kbd></th>
                <td>
                 <ul>
                   <li>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</li>
@@ -276,7 +284,7 @@
                </td>
              </tr>            
              <tr>
-               <td><kbd>Left Arrow</kbd></td>
+               <th><kbd>Left Arrow</kbd></th>
                <td>
                  <ul>
                    <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) or is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>), focus moves to the parent <code>treeitem</code>.
@@ -287,7 +295,7 @@
                </td>
              </tr>
              <tr>
-               <td><kbd>Right Arrow</kbd></td>
+               <th><kbd>Right Arrow</kbd></th>
                <td>
                  <ul>
                    <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) focus stays on current <code>treeitem</code>.</li>
@@ -299,7 +307,7 @@
                </td>
              </tr>
              <tr>
-               <td><kbd>Return</kbd></td>
+               <th><kbd>Return</kbd></th>
                <td>
                 <ul>
                   <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -307,7 +315,7 @@
                 </td>
              </tr>
              <tr>
-               <td><kbd>Space</kbd></td>
+               <th><kbd>Space</kbd></th>
                <td>
                   <ul>
                     <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -315,7 +323,7 @@
                 </td>
              </tr>
              <tr>
-               <td><kbd>Home</kbd></td>
+               <th><kbd>Home</kbd></th>
                <td>
                 <ul>
                   <li>Moves focus to first <code>treeitem</code> in the <code>tree</code>.</li>
@@ -323,7 +331,7 @@
                 </td>
              </tr>
              <tr>
-               <td><kbd>End</kbd></td>
+               <th><kbd>End</kbd></th>
                <td>
                 <ul>
                   <li>Moves focus to last visible <code>treeitem</code> (e.g. depth first) in the <code>tree</code>.</li>
@@ -331,7 +339,7 @@
                 </td>
              </tr>
              <tr>
-               <td><kbd>a-z, A-Z</kbd></td>
+               <th><kbd>a-z, A-Z</kbd></th>
                <td>
                  <ul>
                    <li>Moves focus to next visible <code>treeitem</code> that starts with letter character.</li>
@@ -340,7 +348,7 @@
                </td>
              </tr>
              <tr>
-               <td><kbd>*</kbd></td>
+               <th><kbd>*</kbd></th>
                <td>
                 <ul>
                   <li>Opens all the expandable <code>treeitem</code>s in the current leaf (e.g. siblings of the current <code>treeitem</code>), keyboard focus does not change.</li>
@@ -366,7 +374,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><code>tree</code></td>
+              <th scope="row"><code>tree</code></th>
               <td></td>
               <td><code>ul</code></td>
               <td>
@@ -379,7 +387,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-label=&quot;<em>string</em>&quot;</code></td>
+              <th scope="row"><code>aria-label=&quot;<em>string</em>&quot;</code></th>
               <td><code>ul</code></td>
               <td>
                  <ul>
@@ -389,7 +397,7 @@
               </td>
             </tr>  
             <tr>
-              <td><code>group</code></td>
+              <th scope="row"><code>group</code></th>
               <td></td>
               <td><code>ul</code></td>
               <td>
@@ -402,7 +410,7 @@
               </td>
             </tr>
             <tr>
-              <td><code>treeitem</code></td>
+              <th scope="row"><code>treeitem</code></th>
               <td></td>
               <td><code>li</code></td>
               <td>
@@ -414,7 +422,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>tabindex=&quot;-1&quot;</code></td>
+              <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
@@ -425,7 +433,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>tabindex=&quot;0&quot;</code></td>
+              <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
@@ -438,7 +446,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-expanded=&quot;false&quot;</code></td>
+              <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
@@ -449,7 +457,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-expanded=&quot;true&quot;</code></td>
+              <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
@@ -460,7 +468,7 @@
             </tr>  
             <tr>
               <td></td>
-              <td><code>aria-setsize=&quot;<em>number</em>&quot;</code></td>
+              <th scope="row"><code>aria-setsize=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
@@ -473,7 +481,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-posinset=&quot;<em>number</em>&quot;</code></td>
+              <th scope="row"><code>aria-posinset=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
@@ -486,7 +494,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-level=&quot;<em>number</em>&quot;</code></td>
+              <th scope="row"><code>aria-level=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
