--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -20,7 +20,17 @@
   <body>
     <main>
       <h1>Navigation Treeview Example Using Declared Properties</h1>
-      <p>This example implements the features of an ARIA <code>tree</code> widget using <a href="../../../#TreeView">ARIA Treeview Design Pattern</a> for navigating and selecting a large set of nested links. This example explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.</p>
+      <p>his example implements the features of the
+    <a href="../../../#TreeView">Treeview Design Pattern</a>
+    for navigating and selecting a link in a large set of hierarchically organized links.  It is important in this example that the <code>role=treeitem</code> overrides the default role of link for the <code>a</code> elements, since a <code>treeitem</code> widget cannot contain any interactive elements (e.g. a link).  This example also explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.  </p>
+
+      <p>Similar examples include: </p>
+      <ul>
+        <li><a href="../treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
+        <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
+        <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
+      </ul>
+
       <section>
         <h2 id="ex_label">Example</h2>
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
@@ -471,7 +481,7 @@
          </thead>
          <tbody>
            <tr>
-             <td><kbd>Up arrow</kbd></td>
+             <th><kbd>Up arrow</kbd></th>
              <td>
                 <ul>
                  <li>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</li>
@@ -479,7 +489,7 @@
               </td>
            </tr>
            <tr>
-             <td><kbd>Down arrow</kbd></td>
+             <th><kbd>Down arrow</kbd></th>
              <td>
                 <ul>
                  <li>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</li>
@@ -487,7 +497,7 @@
               </td>
            </tr>            
            <tr>
-             <td><kbd>Left Arrow</kbd></td>
+             <th><kbd>Left Arrow</kbd></th>
              <td>
                <ul>
                  <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) or is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>), focus moves to the parent <code>treeitem</code>.
@@ -498,7 +508,7 @@
              </td>
            </tr>
            <tr>
-             <td><kbd>Right Arrow</kbd></td>
+             <th><kbd>Right Arrow</kbd></th>
              <td>
                <ul>
                  <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) focus stays on current <code>treeitem</code>.</li>
@@ -510,7 +520,7 @@
              </td>
            </tr>
            <tr>
-             <td><kbd>Return</kbd></td>
+             <th><kbd>Return</kbd></th>
              <td>
               <ul>
                 <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -518,7 +528,7 @@
               </td>
            </tr>
            <tr>
-             <td><kbd>Space</kbd></td>
+             <th><kbd>Space</kbd></th>
              <td>
                 <ul>
                   <li>Performs the default action (e.g. onclick event) on the current <code>treeitem</code>, in this example updating the "File or Folder Selected" textbox.</li>
@@ -526,7 +536,7 @@
               </td>
            </tr>
            <tr>
-             <td><kbd>Home</kbd></td>
+             <th><kbd>Home</kbd></th>
              <td>
               <ul>
                 <li>Moves focus to first <code>treeitem</code> in the <code>tree</code>.</li>
@@ -534,7 +544,7 @@
               </td>
            </tr>
            <tr>
-             <td><kbd>End</kbd></td>
+             <th><kbd>End</kbd></th>
              <td>
               <ul>
                 <li>Moves focus to last visible <code>treeitem</code> (e.g. depth first) in the <code>tree</code>.</li>
@@ -542,7 +552,7 @@
              </td>
            </tr>
            <tr>
-             <td><kbd>a-z, A-Z</kbd></td>
+             <th><kbd>a-z, A-Z</kbd></th>
              <td>
                <ul>
                  <li>Moves focus to next visible <code>treeitem</code> that starts with letter character.</li>
@@ -551,7 +561,7 @@
              </td>
            </tr>
            <tr>
-             <td><kbd>*</kbd></td>
+             <th><kbd>*</kbd></th>
              <td>
               <ul>
                 <li>Opens all the expandable <code>treeitem</code>s in the current leaf (e.g. siblings of the current <code>treeitem</code>), keyboard focus does not change.</li>
@@ -576,7 +586,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><code>tree</code></td>
+              <th scope="row"><code>tree</code></th>
               <td></td>
               <td><code>ul</code></td>
               <td>
@@ -589,7 +599,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-label=&quot;<em>string</em>&quot;</code></td>
+              <th scope="row"><code>aria-label=&quot;<em>string</em>&quot;</code></th>
               <td><code>ul</code></td>
               <td>
                  <ul>
@@ -599,7 +609,7 @@
               </td>
             </tr>  
             <tr>
-              <td><code>group</code></td>
+              <th scope="row"><code>group</code></th>
               <td></td>
               <td><code>ul</code></td>
               <td>
@@ -612,7 +622,7 @@
               </td>
             </tr>
             <tr>
-              <td><code>treeitem</code></td>
+              <th scope="row"><code>treeitem</code></th>
               <td></td>
               <td><code>li</code></td>
               <td>
@@ -624,8 +634,8 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>tabindex=&quot;-1&quot;</code></td>
-              <td><code>li</code>/<code>a</code></td>
+              <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
+              <td><code>li</code>, <code>a</code></td>
               <td>
                 <ul>
                   <li>Identifies the <code>treeitem</code> as an elememt that can receive keyboard focus, but will <strong>not</strong> be included in the tab order of the page.</li>
@@ -635,8 +645,8 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>tabindex=&quot;0&quot;</code></td>
-              <td><code>li</code>/<code>a</code></td>
+              <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
+              <td><code>li</code>, <code>a</code></td>
               <td>
                 <ul>
                   <li>Only one <code>treeitem</code> in the same <code>tree</code> has a <code>tabindex=&quot;0&quot;</code>.</li>                
@@ -648,7 +658,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-expanded=&quot;false&quot;</code></td>
+              <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
@@ -659,7 +669,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-expanded=&quot;true&quot;</code></td>
+              <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
               <td><code>li</code></td>
               <td>
                 <ul>
@@ -670,8 +680,8 @@
             </tr>  
             <tr>
               <td></td>
-              <td><code>aria-setsize=&quot;<em>number</em>&quot;</code></td>
-              <td><code>li</code>/<code>a</code></td>
+              <th scope="row"><code>aria-setsize=&quot;<em>number</em>&quot;</code></th>
+              <td><code>li</code>, <code>a</code></td>
               <td>
                 <ul>
                   <li><code>aria-setsize</code> is used to indicate the number of <code>treeitem</code>s in the current leaf of the tree.</li>
@@ -682,8 +692,8 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-posinset=&quot;<em>number</em>&quot;</code></td>
-              <td><code>li</code>/<code>a</code></td>
+              <th scope="row"><code>aria-posinset=&quot;<em>number</em>&quot;</code></th>
+              <td><code>li</code>, <code>a</code></td>
               <td>
                 <ul>
                   <li><code>aria-posinset</code> is used to indicate the position of <code>treeitem</code>s in the current leaf of the tree.</li>
@@ -694,8 +704,8 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-level=&quot;<em>number</em>&quot;</code></td>
-              <td><code>li</code>/<code>a</code></td>
+              <th scope="row"><code>aria-level=&quot;<em>number</em>&quot;</code></th>
+              <td><code>li</code>, <code>a</code></td>
               <td>
                 <ul>
                   <li><code>aria-level</code> is used to indicate the depth of <code>treeitem</code>s in the tree structure.</li>
@@ -705,9 +715,9 @@
               </td>
             </tr>
               <tr>
-                <td>
+                <th scope="row">
                   <code>none</code>
-                </td>
+                </th>
                 <td></td>
                 <td>
                   <code>li</code>
